--- a/Documents/NetBeansProjects/FacialSystem/src/Settings/advancedSets.fxml
+++ b/Documents/NetBeansProjects/FacialSystem/src/Settings/advancedSets.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.effect.*?>
 <?import javafx.scene.paint.*?>
 <?import javafx.scene.text.*?>
 <?import javafx.scene.*?>
@@ -8,19 +9,26 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="413.0" prefWidth="867.0" style="-fx-background-color: #243044;" stylesheets="@GenStyles.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Settings.AdvancedSetsController">
+<AnchorPane id="back" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="413.0" prefWidth="867.0" stylesheets="@GenStyles.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Settings.AdvancedSetsController">
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#243044" height="140.0" layoutX="2.0" opacity="0.21" stroke="BLACK" strokeType="INSIDE" width="289.0" />
       <Group layoutX="65.0" layoutY="70.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#243044" height="268.0" layoutY="140.0" stroke="BLACK" strokeType="INSIDE" width="289.0" />
-      <Label layoutX="15.0" layoutY="149.0" prefHeight="39.0" prefWidth="259.0" text="Change Passwords And create New Users" textFill="#9e2c2c">
+      <Label layoutX="393.0" layoutY="33.0" prefHeight="39.0" prefWidth="259.0" text="Change Passwords And create New Users">
          <font>
             <Font size="14.0" />
          </font>
+         <textFill>
+            <LinearGradient endX="1.0" endY="1.0" startX="0.3">
+               <stops>
+                  <Stop color="BLACK" />
+                  <Stop color="WHITE" offset="1.0" />
+               </stops>
+            </LinearGradient>
+         </textFill>
       </Label>
-      <ComboBox editable="true" layoutX="25.0" layoutY="207.0" prefHeight="32.0" prefWidth="212.0" promptText="Enter Matricule" style="-fx-background-color: 13;" />
-      <TextField layoutX="25.0" layoutY="262.0" prefHeight="25.0" prefWidth="233.0" promptText="Enter Password" />
-      <TextField layoutX="26.0" layoutY="299.0" prefHeight="25.0" prefWidth="233.0" promptText="Re-type Passwords" />
+      <ComboBox editable="true" layoutX="417.0" layoutY="79.0" prefHeight="32.0" prefWidth="233.0" promptText="Enter Matricule" style="-fx-background-color: 13;" />
+      <TextField layoutX="417.0" layoutY="128.0" prefHeight="25.0" prefWidth="233.0" promptText="Enter Password" />
+      <TextField layoutX="417.0" layoutY="176.0" prefHeight="25.0" prefWidth="233.0" promptText="Re-type Passwords" />
       <RadioButton layoutX="34.0" layoutY="52.0" mnemonicParsing="false" style="-fx-background-color: onAction=&quot;#Changepic&quot;;" text="Use Biometric Login" textFill="#d7b7b7">
          <font>
             <Font size="14.0" />
@@ -29,48 +37,36 @@
          <font>
             <Font size="13.0" />
          </font></RadioButton>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#243044" height="419.0" layoutX="289.0" layoutY="-2.0" stroke="BLACK" strokeType="INSIDE" width="267.0" />
-      <RadioButton layoutX="367.0" layoutY="95.0" mnemonicParsing="false" text="PCA" textFill="#cdc4c4">
-         <font>
-            <Font size="15.0" />
-         </font></RadioButton>
-      <RadioButton layoutX="367.0" layoutY="135.0" mnemonicParsing="false" text="Eigenfaces" textFill="#cdc4c4">
-         <font>
-            <Font size="15.0" />
-         </font></RadioButton>
-      <RadioButton layoutX="367.0" layoutY="181.0" mnemonicParsing="false" text="SOM" textFill="#cdc4c4">
-         <font>
-            <Font size="15.0" />
-         </font></RadioButton>
-      <RadioButton layoutX="367.0" layoutY="224.0" mnemonicParsing="false" text="Geometric" textFill="#cdc4c4">
-         <font>
-            <Font size="15.0" />
-         </font></RadioButton>
-      <Label layoutX="308.0" layoutY="14.0" prefHeight="31.0" prefWidth="221.0" text="Choose Algorithm" textFill="#a46b6b">
+      <Label layoutX="36.0" layoutY="188.0" prefHeight="31.0" prefWidth="221.0" text="Choose Algorithm">
          <font>
             <Font size="26.0" />
          </font>
+         <textFill>
+            <LinearGradient endX="1.0" endY="1.0">
+               <stops>
+                  <Stop color="#da6d6d" />
+                  <Stop color="WHITE" offset="1.0" />
+               </stops>
+            </LinearGradient>
+         </textFill>
       </Label>
-      <Button id="button1" layoutX="363.0" layoutY="316.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="160.0" text="Apply" textFill="#d0cbcb">
-         <font>
-            <Font size="33.0" />
-         </font></Button>
-      <Button id="button1" layoutX="560.0" layoutY="44.0" mnemonicParsing="false" prefHeight="88.0" prefWidth="305.0" text="Backup System" textFill="#eee3e3">
-         <font>
-            <Font size="32.0" />
-         </font>
-      </Button>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#70767c" height="237.0" layoutX="556.0" layoutY="183.0" stroke="BLACK" strokeType="INSIDE" width="312.0" />
-      <ComboBox editable="true" layoutX="562.0" layoutY="227.0" prefHeight="47.0" prefWidth="247.0" promptText="Select Backup Date" />
-      <Button id="button1" layoutX="562.0" layoutY="300.0" mnemonicParsing="false" prefHeight="80.0" prefWidth="305.0" text="Restore" textFill="#eed3d3">
-         <font>
-            <Font size="40.0" />
-         </font>
-      </Button>
-      <Button id="button1" layoutX="121.0" layoutY="344.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="138.0" text="Validate" textFill="#fcf0f0">
+      <Button id="button1" blendMode="SCREEN" layoutX="361.0" layoutY="310.0" mnemonicParsing="false" onAction="#ModifyUser" prefHeight="70.0" prefWidth="175.0" text="Modify/Add" textFill="#fcf0f0">
          <font>
             <Font size="23.0" />
          </font>
+         <effect>
+            <Bloom />
+         </effect>
+      </Button>
+      <ComboBox editable="true" layoutX="24.0" layoutY="269.0" prefHeight="25.0" prefWidth="241.0" promptText="Choose Processing Algorithm" />
+      <ComboBox editable="true" layoutX="417.0" layoutY="244.0" prefHeight="25.0" prefWidth="241.0" promptText="Administrative Status" />
+      <Button id="button1" blendMode="SCREEN" layoutX="588.0" layoutY="309.0" mnemonicParsing="false" onAction="#DeletUser" prefHeight="76.0" prefWidth="182.0" text="Delete" textFill="#e13e3e">
+         <font>
+            <Font size="31.0" />
+         </font>
+         <effect>
+            <Bloom />
+         </effect>
       </Button>
    </children>
 </AnchorPane>
