--- a/Documents/NetBeansProjects/FacialSystem/src/ListGenerator/listView.fxml
+++ b/Documents/NetBeansProjects/FacialSystem/src/ListGenerator/listView.fxml
@@ -10,22 +10,22 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="465.0" prefWidth="1068.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ListGenerator.ListViewController">
+<AnchorPane id="back" prefHeight="465.0" prefWidth="1068.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ListGenerator.ListViewController">
     <stylesheets>
         <URL value="@listview.css" />
+      <URL value="@../Settings/GenStyles.css" />
         
     </stylesheets>
    <children>
       <Pane prefHeight="465.0" prefWidth="1068.0" style="-fx-background-radius: 12;">
          <children>
-            <TableView fx:id="listTable" editable="true" layoutX="71.0" layoutY="64.0" prefHeight="310.0" prefWidth="958.0" style="-fx-background-radius: 12;" tableMenuButtonVisible="true">
+            <TableView id="back" fx:id="listTable" editable="true" layoutX="71.0" layoutY="64.0" prefHeight="310.0" prefWidth="958.0" style="-fx-background-radius: 12;" stylesheets="@../Settings/GenStyles.css" tableMenuButtonVisible="true">
               <columns>
-                <TableColumn fx:id="name" prefWidth="188.0" text="Name" />
                 <TableColumn fx:id="matric" prefWidth="183.0" text="Matricule" />
                   <TableColumn fx:id="code" prefWidth="128.0" text="Corse Name" />
                   <TableColumn fx:id="stTime" prefWidth="192.0" text="Start time" />
-                  <TableColumn fx:id="etTime" prefWidth="171.0" text="End Time" />
-                  <TableColumn fx:id="state" prefWidth="75.0" text="Status" />
+                  <TableColumn fx:id="etTime" prefWidth="194.0" text="End Time" />
+                  <TableColumn fx:id="state" prefWidth="159.0" text="Status" />
               </columns>
                <effect>
                   <Lighting>
