--- a/Documents/NetBeansProjects/FacialSystem/src/Settings/ConnectionSets.fxml
+++ b/Documents/NetBeansProjects/FacialSystem/src/Settings/ConnectionSets.fxml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.effect.*?>
+<?import javafx.scene.*?>
 <?import javafx.scene.paint.*?>
 <?import javafx.scene.text.*?>
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="413.0" prefWidth="923.0" style="-fx-background-color: #262c29;" stylesheets="@GenStyles.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Settings.ConnectionSetsController">
+<AnchorPane id="back" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="413.0" prefWidth="923.0" stylesheets="@GenStyles.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Settings.ConnectionSetsController">
    <children>
       <CheckBox layoutX="50.0" layoutY="36.0" mnemonicParsing="false" onAction="#UseMobile" prefHeight="21.0" prefWidth="261.0" text="Synchronize to Mobile" textFill="#e8d3d3">
          <font>
@@ -21,7 +22,7 @@
          </font>
       </Label>
       <TextField fx:id="newHost" layoutX="79.0" layoutY="194.0" prefHeight="33.0" prefWidth="250.0" promptText="New Remote Host e.g 192.698.122.31" />
-      <Button id="button1" layoutX="271.0" layoutY="263.0" mnemonicParsing="false" onAction="#Submit" prefHeight="53.0" prefWidth="150.0" text="Submit">
+      <Button id="button1" blendMode="SCREEN" layoutX="271.0" layoutY="263.0" mnemonicParsing="false" onAction="#Submit" prefHeight="53.0" prefWidth="150.0" text="Submit">
          <font>
             <Font size="28.0" />
          </font>
@@ -33,6 +34,12 @@
                </stops>
             </LinearGradient>
          </textFill>
+         <cursor>
+            <Cursor fx:constant="MOVE" />
+         </cursor>
+         <effect>
+            <InnerShadow />
+         </effect>
       </Button>
    </children>
 </AnchorPane>
