--- a/Documents/NetBeansProjects/FacialSystem/src/facialsystem/login.fxml
+++ b/Documents/NetBeansProjects/FacialSystem/src/facialsystem/login.fxml
@@ -10,146 +10,18 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane fx:id="login" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="762.0" prefWidth="1305.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="facialsystem.LoginController">
+<AnchorPane id="logScreen" fx:id="login" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="580.0" prefWidth="1305.0" stylesheets="@../Settings/GenStyles.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="facialsystem.LoginController">
    <children>
-      <Pane layoutX="-3.0" layoutY="-1.0" prefHeight="767.0" prefWidth="1306.0" style="-fx-background-color: #f1f1f1;" AnchorPane.leftAnchor="-3.0" AnchorPane.rightAnchor="2.0">
+      <Pane layoutY="97.0" prefHeight="767.0" prefWidth="1306.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="-1.0">
          <children>
-            <ImageView blendMode="MULTIPLY" cache="true" fitHeight="821.0" fitWidth="1309.0" focusTraversable="true" layoutX="-8.0" layoutY="-1.0" pickOnBounds="true" preserveRatio="true" smooth="false">
-               <image>
-                  <Image url="@Dependency/ba.png" />
-               </image>
-               <effect>
-                  <Blend />
-               </effect>
-            </ImageView>
-            <Pane layoutX="-7.0" layoutY="95.0">
+            <Pane id="ane" layoutX="358.0" layoutY="124.0" prefHeight="328.0" prefWidth="653.0">
                <children>
-                  <ImageView blendMode="MULTIPLY" cache="true" fitHeight="821.0" fitWidth="1309.0" focusTraversable="true" pickOnBounds="true" preserveRatio="true" smooth="false">
-                     <effect>
-                        <Blend />
-                     </effect>
-                     <image>
-                        <Image url="@Dependency/ba.png" />
-                     </image>
-                  </ImageView>
-               </children>
-            </Pane>
-            <Pane layoutX="3.0" layoutY="105.0">
-               <children>
-                  <ImageView blendMode="MULTIPLY" cache="true" fitHeight="821.0" fitWidth="1309.0" focusTraversable="true" layoutX="-10.0" layoutY="86.0" pickOnBounds="true" preserveRatio="true" smooth="false">
-                     <effect>
-                        <Blend />
-                     </effect>
-                     <image>
-                        <Image url="@Dependency/ba.png" />
-                     </image>
-                  </ImageView>
-                  <ImageView blendMode="MULTIPLY" cache="true" fitHeight="821.0" fitWidth="1309.0" focusTraversable="true" layoutX="-11.0" layoutY="182.0" pickOnBounds="true" preserveRatio="true" smooth="false">
-                     <effect>
-                        <Blend />
-                     </effect>
-                     <image>
-                        <Image url="@Dependency/ba.png" />
-                     </image>
-                  </ImageView>
-               </children>
-            </Pane>
-            <Pane layoutX="2.0" layoutY="294.0">
-               <children>
-                  <ImageView blendMode="MULTIPLY" cache="true" fitHeight="821.0" fitWidth="1309.0" focusTraversable="true" layoutX="-10.0" layoutY="89.0" pickOnBounds="true" preserveRatio="true" smooth="false">
-                     <effect>
-                        <Blend />
-                     </effect>
-                     <image>
-                        <Image url="@Dependency/ba.png" />
-                     </image>
-                  </ImageView>
-                  <ImageView blendMode="MULTIPLY" cache="true" fitHeight="821.0" fitWidth="1309.0" focusTraversable="true" layoutX="-10.0" layoutY="185.0" pickOnBounds="true" preserveRatio="true" smooth="false">
-                     <effect>
-                        <Blend />
-                     </effect>
-                     <image>
-                        <Image url="@Dependency/ba.png" />
-                     </image>
-                  </ImageView>
-                  <ImageView blendMode="MULTIPLY" cache="true" fitHeight="96.0" fitWidth="1326.0" focusTraversable="true" layoutX="-9.0" layoutY="281.0" pickOnBounds="true" preserveRatio="true" smooth="false">
-                     <effect>
-                        <Blend />
-                     </effect>
-                     <image>
-                        <Image url="@Dependency/ba.png" />
-                     </image>
-                  </ImageView>
-                  <ImageView blendMode="MULTIPLY" cache="true" fitHeight="821.0" fitWidth="1309.0" focusTraversable="true" layoutX="-9.0" layoutY="377.0" pickOnBounds="true" preserveRatio="true" smooth="false">
-                     <effect>
-                        <Blend />
-                     </effect>
-                     <image>
-                        <Image url="@Dependency/ba.png" />
-                     </image>
-                  </ImageView>
-                  <ImageView fitHeight="145.0" fitWidth="472.0" focusTraversable="true" layoutX="328.0" layoutY="-84.0" pickOnBounds="true" preserveRatio="true" smooth="false" translateX="1.0">
-                     <cursor>
-                        <Cursor fx:constant="DEFAULT" />
-                     </cursor>
-                     <image>
-                        <Image url="@Dependency/bacck.jpg" />
-                     </image>
-                  </ImageView>
-                  <ImageView fitHeight="145.0" fitWidth="472.0" focusTraversable="true" layoutX="329.0" layoutY="60.0" pickOnBounds="true" preserveRatio="true" translateX="1.0">
-                     <cursor>
-                        <Cursor fx:constant="DEFAULT" />
-                     </cursor>
-                     <image>
-                        <Image url="@Dependency/bacck.jpg" />
-                     </image>
-                  </ImageView>
-                  <ImageView fitHeight="145.0" fitWidth="472.0" focusTraversable="true" layoutX="600.0" layoutY="-84.0" pickOnBounds="true" preserveRatio="true" smooth="false" translateX="1.0">
-                     <cursor>
-                        <Cursor fx:constant="DEFAULT" />
-                     </cursor>
-                     <image>
-                        <Image url="@Dependency/bacck.jpg" />
-                     </image>
-                  </ImageView>
-                  <ImageView fitHeight="145.0" fitWidth="472.0" focusTraversable="true" layoutX="329.0" layoutY="204.0" pickOnBounds="true" preserveRatio="true" smooth="false" translateX="1.0">
-                     <cursor>
-                        <Cursor fx:constant="DEFAULT" />
-                     </cursor>
-                     <image>
-                        <Image url="@Dependency/bacck.jpg" />
-                     </image>
-                  </ImageView>
-                  <ImageView fitHeight="145.0" fitWidth="472.0" focusTraversable="true" layoutX="599.0" layoutY="61.0" pickOnBounds="true" preserveRatio="true" smooth="false" translateX="1.0">
-                     <cursor>
-                        <Cursor fx:constant="DEFAULT" />
-                     </cursor>
-                     <image>
-                        <Image url="@Dependency/bacck.jpg" />
-                     </image>
-                  </ImageView>
-                  <ImageView fitHeight="145.0" fitWidth="472.0" focusTraversable="true" layoutX="600.0" layoutY="204.0" pickOnBounds="true" preserveRatio="true" smooth="false" translateX="1.0">
-                     <cursor>
-                        <Cursor fx:constant="DEFAULT" />
-                     </cursor>
-                     <image>
-                        <Image url="@Dependency/bacck.jpg" />
-                     </image>
-                  </ImageView>
-                  <Label layoutX="336.0" layoutY="-74.0" prefHeight="104.0" prefWidth="485.0" text="Attendance System Login" translateX="1.0">
+                  <Label id="lab" alignment="CENTER" contentDisplay="CENTER" layoutX="-8.0" layoutY="-115.0" prefHeight="109.0" prefWidth="667.0" text="Attendance System Login" textFill="#281515" translateX="1.0">
                      <font>
                         <Font size="41.0" />
                      </font>
-                     <textFill>
-                        <LinearGradient endX="1.0" endY="1.0" startX="0.01904761904761905" startY="0.4095238095238095">
-                           <stops>
-                              <Stop color="#b5afaf" />
-                              <Stop color="WHITE" offset="1.0" />
-                           </stops>
-                        </LinearGradient>
-                     </textFill>
                   </Label>
-                  <VBox alignment="CENTER_LEFT" layoutX="396.0" layoutY="40.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="207.0" prefWidth="112.0" translateX="1.0">
+                  <VBox alignment="CENTER_LEFT" layoutX="134.0" layoutY="-2.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="207.0" prefWidth="112.0" translateX="1.0">
                      <children>
                         <Label prefHeight="55.0" prefWidth="112.0" text="User Name:" translateX="1.0">
                            <textFill>
@@ -195,41 +67,29 @@
                         </Label>
                      </children>
                   </VBox>
-                  <TextField fx:id="username" layoutX="560.0" layoutY="77.0" prefHeight="35.0" prefWidth="223.0" promptText="Username" style="-fx-background-radius: 12;" translateX="1.0" />
-                  <TextField fx:id="password" layoutX="557.0" layoutY="134.0" prefHeight="35.0" prefWidth="223.0" promptText="Password" style="-fx-background-radius: 12;" translateX="1.0" />
-                  <Label fx:id="status" layoutX="345.0" layoutY="12.0" prefHeight="35.0" prefWidth="413.0" text="Failed to Verify password and/Or Username" textFill="#da5757" translateX="1.0" visible="false">
+                  <TextField fx:id="username" layoutX="326.0" layoutY="38.0" prefHeight="35.0" prefWidth="223.0" promptText="Username" style="-fx-background-radius: 12;" translateX="1.0" />
+                  <TextField fx:id="password" layoutX="326.0" layoutY="102.0" prefHeight="35.0" prefWidth="223.0" promptText="Password" style="-fx-background-radius: 12;" translateX="1.0" />
+                  <Button fx:id="logingbtn" blendMode="MULTIPLY" layoutX="171.0" layoutY="214.0" mnemonicParsing="false" onMouseClicked="#verifyCreds" prefHeight="77.0" prefWidth="338.0" text="LOGIN" translateX="1.0">
                      <font>
-                        <Font size="19.0" />
+                        <Font size="41.0" />
                      </font>
-                  </Label>
-                  <ImageView fitHeight="145.0" fitWidth="472.0" focusTraversable="true" layoutX="601.0" layoutY="342.0" pickOnBounds="true" preserveRatio="true" smooth="false">
-                     <cursor>
-                        <Cursor fx:constant="DEFAULT" />
-                     </cursor>
-                     <image>
-                        <Image url="@Dependency/bacck.jpg" />
-                     </image>
-                  </ImageView>
-                  <ImageView fitHeight="145.0" fitWidth="472.0" focusTraversable="true" layoutX="329.0" layoutY="344.0" pickOnBounds="true" preserveRatio="true" smooth="false">
-                     <cursor>
-                        <Cursor fx:constant="DEFAULT" />
-                     </cursor>
-                     <image>
-                        <Image url="@Dependency/bacck.jpg" />
-                     </image>
-                  </ImageView>
-                  <Button fx:id="logingbtn" layoutX="428.0" layoutY="353.0" mnemonicParsing="false" onMouseClicked="#verifyCreds" prefHeight="77.0" prefWidth="338.0" text="LOGIN" textFill="#494f55" translateX="1.0">
-                     <graphic>
-                        <ImageView fitHeight="83.0" fitWidth="344.0" onMouseClicked="#verifyCreds" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@Dependency/log.png" />
-                           </image>
-                        </ImageView>
-                     </graphic></Button>
-                  <TextField fx:id="InitcourseCode" layoutX="558.0" layoutY="193.0" prefHeight="35.0" prefWidth="223.0" promptText="Course Code" style="-fx-background-radius: 12;" />
+                     <textFill>
+                        <LinearGradient endX="1.0" endY="1.0">
+                           <stops>
+                              <Stop color="BLACK" />
+                              <Stop color="WHITE" offset="1.0" />
+                           </stops>
+                        </LinearGradient>
+                     </textFill></Button>
+                  <TextField fx:id="InitcourseCode" layoutX="327.0" layoutY="154.0" prefHeight="35.0" prefWidth="223.0" promptText="Course Code" style="-fx-background-radius: 12;" />
                </children>
             </Pane>
          </children>
       </Pane>
+      <Label fx:id="status" alignment="CENTER" contentDisplay="CENTER" layoutX="355.0" layoutY="219.0" prefHeight="35.0" prefWidth="620.0" text="Failed to Verify password and/Or Username" textFill="#da5757" visible="false">
+         <font>
+            <Font size="19.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
